# Agentic_RAG

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  packages.txt  pyproject.toml  requirements.txt
config/: settings.py
data/sample/: example_chat_interaction.md  sample_document.txt
scripts/: chat_cli.py  create_sample_pdf.py  create_scanned_pdf.py  ingest_document.py  test_gradio.py  test_ocr_api.py
src/agents/: final_response.py  generator.py  retriever.py  validator.py
src/embeddings/: embedding_model.py
src/ingestion/: ocr_engine.py  pdf_loader.py  text_processor.py
src/utils/: helpers.py
src/vectorstore/: chroma_store.py
src/workflow/: graph.py  state.py
streamlit_app/: app.py
