[project]
name = "rag-agentic-system"
version = "0.1.0"
description = "RAG system with LangGraph agentic workflow for Anervea.ai"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.22",
    "pypdf>=3.17.4",
    "PyPDF2>=3.0.1",
    "pdf2image>=1.16.3",
    "Pillow>=10.2.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "streamlit>=1.30.0",
    "loguru>=0.7.2",
    "langchain-experimental>=0.0.47",
    "tiktoken>=0.5.2",
    "requests>=2.31.0",
    "replicate>=0.23.1",
    "pymupdf>=1.23.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
